Add grid generator

--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
+.body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.buttonDiv{
+    padding: 23px;
+}
+
 .grid{
     display: flex;
     flex-wrap: wrap;
-    height: 90vh;
-    width: 90vh;
+    height: 75vh;
+    width: 75vh;
 }
 
 .unit{
-    height: calc(90vh / 16);
-    width: calc(90vh/ 16);
     aspect-ratio: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid;
+    border: 0.5px solid;
     box-sizing: border-box;
 }
